--- a/Window/supportscreen/support.css
+++ b/Window/supportscreen/support.css
@@ -1,20 +1,24 @@
-body{
+html,body{
     background-color:lightgreen;
+    /*makes footer take up all the space */
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 .title{
     color:white;
     text-align:left;
-    padding:1 rem;
-    padding-left:8px;
-    position:sticky;
-    top:1px;
-    background-color:lightgreen;
+    padding-left:1rem;
+    flex:1;
 }
 .navbar3 ul{
     list-style:none;
     background:#444;
-    /*width:100%;*/
+    width:100%;
     padding:0;
+    display:flex;
     margin:0;
     text-align:right;
 }
@@ -35,7 +39,95 @@ body{
     text-align:center;
 }
 
-.navbar3 a:hover{
-    background:whitesmoke;
-    color:#444;
+.navbar3 a {
+  position: relative;
+  z-index: 1;
 }
+
+.navbar3 a:hover::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  right: 0;
+  bottom: -12px;
+  background: whitesmoke;
+  z-index: -1;
+}
+.navbar3 a:hover{
+  color:#444;
+}
+
+.directiontext{
+    color:white;
+    height:20px;
+    font-family:arial;
+}
+.submitbutton {
+    background-color: #444;
+    color: white;
+    padding: 1rem;
+    border-radius:2rem;
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+  }
+  .submitbutton:hover{
+    background-color:whitesmoke;
+    color:#666;
+  }
+  .submitbutton:active{
+    background-color:gray;
+    color:#666
+  }
+  .info{
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items:center;
+    width:80%;
+    margin:auto;
+  }
+
+/* footer for screen with hyperlinks */
+.footer-container{
+    background-color:#343434;
+    padding-bottom: 0;
+    padding-top: 0;
+  }
+  .footer{
+    width:100%;
+    height: 30vh;
+    background-color:#343434;
+    color:white;
+    display:flex;
+    margin: 0 auto;
+    justify-content:center;
+    flex-wrap:wrap;
+  }
+  
+  .footer-heading{
+    display:flex;
+    flex-direction: column;
+    margin-right: 4rem;
+  }
+  
+  .footer-heading h2{
+    margin-bottom: 2rem;
+  }
+  
+  .footer-heading a{
+    color:#e1d9d1;
+    text-decoration:none;
+    margin-bottom:0.5rem;
+  }
+  /* footer-text chnages color when hovered */
+  .footer-heading a:hover{
+    color:gray;
+    transition: 0.3s ease-out;
+  }
+  .footer-head h2:hover{
+    color:darkgray;
+    transition: 0.3 ease-out;
+  }
+  
