--- a/Window/createscreen/create.css
+++ b/Window/createscreen/create.css
@@ -13,10 +13,118 @@ body{
 .title{
   color:white;
   text-align:left;
+  padding:1rem;
   padding-left:1rem;
   flex:1;
 }
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  font-family:'poppins', sans-serif;
+}
 
+.container{
+  width:50%;
+  min-height: 100vh;
+  background:white;
+  padding:10px;
+  margin:100px auto;
+  border-radius:25%;
+}
+
+.hw-list {
+  width:100%;
+  max-width:540px;
+  background:white;
+  margin:100px auto 20px;
+  padding: 40px 30px 70px;
+  border-radius:10px;
+}
+.hw-list h2{
+  color:#002765;
+  display:flex;
+  align-items:center;
+  margin-bottom:20px;
+}
+.hw-list h2 img{
+  width:30px;
+  margin-left:10px;
+}
+.row{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  background:#edeef0;
+  border-radius:30px;
+  padding-left:20px;
+  margin-bottom:25px;
+}
+input{
+  flex:1;
+  border:none;
+  outline:none;
+  background:transparent;
+  padding:10px;
+  font-weight:14px;
+}
+.addbutton{
+  border:none;
+  outline:none;
+  padding:16px 50px;
+  background:lightgreen;
+  color:white;
+  font-size:1rem;
+  cursor:pointer;
+  border-radius:40px;
+}
+.container ul li{
+  list-style:none;
+  font-size:17px;
+  padding:12px 8px 12px 50px;
+  user-select:none;
+  display:flex;
+  align-items:center;
+  cursor:pointer;
+  position:relative;
+}
+.container ul li::before{
+  content:'';
+  position:absolute;
+  height:28px;
+  width:28px;
+  border-radius:50%;
+  background-image:url(images/uncheckedbox.png);
+  background-size:cover;
+  background-position:center;
+  /* Properly level the checkbox button with the text to the right of it */
+  top:50%;
+  transform: translateY(-50%);
+  left:8px;
+  margin-top:0px;
+}
+ul li.checked{
+  color:#555;
+  text-decoration:line-through;
+}
+ul li.checked::before{
+  background-image:url(images/checkimage.png)
+}
+ul li span{
+  position:absolute;
+  right:0;
+  top:5px;
+  width:40px;
+  height:40px;
+  font-size:22px;
+  color:#444;
+  line-height:40px;
+  text-align:center;
+  border-radius:50%;
+}
+ul li span:hover{
+  background:#edeef0;
+}
 .navbar2 ul{
     list-style:none;
     background:#444;
@@ -24,6 +132,7 @@ body{
     padding:0;
     /*makes sure the title and navbar are on same row with no gaps/background color showing */
     display:flex;
+    justify-content:flex-end;
     margin:0;
     text-align:right;
 }
@@ -37,171 +146,36 @@ body{
     color: whitesmoke;
     width:100px;
     display:block;
-    padding: 25px 20px;
+    padding: 25px 30px 25px 20px;
+    margin-right:1rem;
     text-transform:uppercase;
     font-weight:bold;
     font-family: arial;
     text-align:center;
 }
-
+.navbar2 .supportbutton{
+  padding-right:30px;
+}
 .navbar2 a {
   position: relative;
   z-index: 1;
 }
-
+.navbar2 .supportbutton:hover {
+  background-color: whitesmoke;
+  width:100%;
+}
 .navbar2 a:hover::before {
   content: "";
   position: absolute;
   top: -5px;
   left: 0;
-  right: 0;
-  bottom: -12px;
+  right: 0px;
+  bottom: -1px;
   background: whitesmoke;
   z-index: -1;
 }
 .navbar2 a:hover{
   color:#444;
-}
-
-
-.directions{
-    color:white;
-    font-family:'Open Sans';
-    font-size:20px;
-}
-
-.textarea {
-    background-color: whitesmoke;
-    color: #333;
-    padding: 1em;
-    border-radius: 10px;
-    border: 2px solid transparent;
-    outline: none;
-    font-family: "Heebo", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.4;
-    width: 200px;
-    height: 100px;
-    transition: all 0.2s;
-  }
-  
-  .textarea:hover {
-    cursor: pointer;
-    background-color:white;
-  }
-  
-  .textarea:focus {
-    cursor: text;
-    color: #333333;
-    background-color: white;
-    border-color: #333333;
-  }
-
-.dropdownbutton {
-    background-color: #444;
-    color: white;
-    padding: 1rem;
-    border-radius:2rem;
-    font-size: 1rem;
-    border: none;
-    cursor: pointer;
-  }
-  
-.dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 140px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-.dropdown-content a:hover {background-color: #f1f1f1}
-  
-.dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
-.dropdown:hover .dropdownbutton {
-    background-color: #666;
-  }
-
-.addbutton{
-    display:flex;
-    justify-content:center;
-    height:100%;
-    width:100%;
-    padding:10px;
-    background:transparent;
-    border:none;
-    outline:none;
-    border-radius:5px;
-    overflow:hidden;
-}
-
-.addbutton:hover{
-    background-color:whitesmoke;
-}
-
-.addbutton:active{
-    background-color:gray;
-    color:#666;
-}
-.addbutton__icon{
-    display:inline-flex;
-    align-items:center;
-    justify-content:center;
-    padding: 1px;
-    color:#444;
-    height:100%;
-    font-size:100px;
-
-}
-
-.todolisttext{
-  color:#444;
-}
-
-.deletebutton{
-  display:flex;
-  height:100%;
-  width:100%;
-  padding:10px;
-  background:transparent;
-  border:none;
-  outline:none;
-  border-radius:5px;
-  overflow:hidden;
-}
-
-.deletebutton:hover{
-  background-color:whitesmoke;
-}
-
-.deletebutton:active{
-  background-color:gray;
-  color:#666;
-}
-.deletebutton__icon{
-  display:inline-flex;
-  align-items:center;
-  padding: 1px;
-  color:#444;
-  height:100%;
-  font-size:100px;
 }
 
 /*center all the content on screen */
@@ -216,6 +190,69 @@ body{
   flex:1;
 }
 
+.wrapperbody, .wrapper, .content{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wrapperbody{
+  padding: 0 10px;
+  min-height: 100vh;
+  background: lightgreen;
+}
+.wrapper{
+  width: 700px;
+  padding: 30px 30px 38px;
+  background:white;
+  border-radius: 10px;
+  flex-direction: column;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+}
+.wrapper img{
+  max-width: 103px;
+}
+.wrapper h1{
+  font-size: 38px;
+  font-weight: 500;
+  margin: 30px 0;
+}
+.wrapper .content{
+  width: 100%;
+  justify-content: space-between;
+}
+.content.disable{
+  cursor: no-drop;
+}
+.content .column{
+  padding: 0 10px;
+  border-radius: 5px;
+  border: 1px solid #bfbfbf;
+  width: calc(100% / 3 - 5px);
+}
+.content.disable .column{
+  opacity: 0.6;
+  pointer-events: none;
+}
+.column select{
+  width: 100%;
+  height: 53px;
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 19px;
+}
+.wrapper button{
+  width: 100%;
+  border: none;
+  outline: none;
+  color: #fff;
+  cursor: pointer;
+  font-size: 20px;
+  padding: 17px 0;
+  margin-top: 20px;
+  border-radius: 5px;
+  background: lightgreen;
+}
 /* footer for screen with hyperlinks */
 .footer-container{
   background-color:#343434;
@@ -230,6 +267,7 @@ body{
   margin: 0 auto;
   justify-content:center;
   flex-wrap:wrap;
+  padding-top:50px;
 }
 
 .footer-heading{
