--- a/Window/createscreen/create.css
+++ b/Window/createscreen/create.css
@@ -1,5 +1,5 @@
 body{
-    background-color:lightgreen;
+    background-color:#0092ca;
     /*makes footer take up all the space */
     display: flex;
     flex-direction: column;
@@ -72,7 +72,7 @@ input{
   border:none;
   outline:none;
   padding:16px 50px;
-  background:lightgreen;
+  background:#0092ca;
   color:white;
   font-size:1rem;
   cursor:pointer;
@@ -117,7 +117,7 @@ ul li span{
   width:40px;
   height:40px;
   font-size:22px;
-  color:#444;
+  color: #222831;
   line-height:40px;
   text-align:center;
   border-radius:50%;
@@ -127,7 +127,7 @@ ul li span:hover{
 }
 .navbar2 ul{
     list-style:none;
-    background:#444;
+    background: #222831;
     width:100%;
     padding:0;
     /*makes sure the title and navbar are on same row with no gaps/background color showing */
@@ -143,7 +143,7 @@ ul li span:hover{
 /* text in navbar style */
 .navbar2 a{
     text-decoration:none;
-    color: whitesmoke;
+    color: #eeeeee;
     width:100px;
     display:block;
     padding: 25px 30px 25px 20px;
@@ -161,7 +161,7 @@ ul li span:hover{
   z-index: 1;
 }
 .navbar2 .supportbutton:hover {
-  background-color: whitesmoke;
+  background-color: #eeeeee;
   width:100%;
 }
 .navbar2 a:hover::before {
@@ -171,11 +171,11 @@ ul li span:hover{
   left: 0;
   right: 0px;
   bottom: -1px;
-  background: whitesmoke;
+  background: #eeeeee;
   z-index: -1;
 }
 .navbar2 a:hover{
-  color:#444;
+  color: #222831
 }
 
 /*center all the content on screen */
@@ -198,7 +198,7 @@ ul li span:hover{
 .wrapperbody{
   padding: 0 10px;
   min-height: 100vh;
-  background: lightgreen;
+  background: #0092ca;
 }
 .wrapper{
   width: 700px;
@@ -251,17 +251,17 @@ ul li span:hover{
   padding: 17px 0;
   margin-top: 20px;
   border-radius: 5px;
-  background: lightgreen;
+  background: #0092ca;
 }
 /* footer for screen with hyperlinks */
 .footer-container{
-  background-color:#343434;
+  background-color:#393e46;
   padding-top: 0;
 }
 .footer{
   width:100%;
   height: 30vh;
-  background-color:#343434;
+  background-color:#393e46;
   color:white;
   display:flex;
   margin: 0 auto;
@@ -281,7 +281,7 @@ ul li span:hover{
 }
 
 .footer-heading a{
-  color:#e1d9d1;
+  color:#eeeeee;
   text-decoration:none;
   margin-bottom:0.5rem;
 }
