--- a/Window/homescreen/home.css
+++ b/Window/homescreen/home.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 body{
     background-color:#0092ca;
     /*makes footer take up all the space so there are no gaps of background */
@@ -36,9 +37,8 @@ body{
     display:inline-block;
     box-sizing:border-box;
     padding: 25px 20px;
-    text-transform:uppercase;
     font-weight:bold;
-    font-family: arial;
+    font-family: 'Montserrat', sans-serif;
     text-align:center;
     /* Add the following properties */
     min-width: 150px;
