--- a/Window/supportscreen/support.css
+++ b/Window/supportscreen/support.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 html,body{
     background-color:#0092ca;
     /*makes footer take up all the space */
@@ -38,9 +39,8 @@ html,body{
     width:100px;
     display:block;
     padding: 25px 20px;
-    text-transform:uppercase;
     font-weight:bold;
-    font-family: arial;
+    font-family: 'Montserrat', sans-serif;
     text-align:center;
 }
 
