--- a/Window/toolscreen/tool.css
+++ b/Window/toolscreen/tool.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 html,body{
     background-color:#0092ca;
     /*makes footer take up all the space */
@@ -65,6 +66,13 @@ html,body{
   color: #222831;
 }
 
+.calculatorheader{
+    font-family:'montserrat';
+    font-size:3rem;
+    color:#333;
+    font-weight:2rem;
+    text-align:center;
+}
 .calculatorbody{
     width: 100%;
     height: 100vh;
@@ -112,7 +120,7 @@ button{
 }
 
 .equalbutton{
-    background-color: #fb7c14;
+    background-color: #f66837;
 }
 
 .operator{
