--- a/Window/createscreen/create.css
+++ b/Window/createscreen/create.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+
 
 body{
     background-color:#0092ca;
@@ -100,6 +100,13 @@ body{
   padding:10px;
   margin:100px auto;
   border-radius:25%;
+}
+
+.exampletext{
+  color:#3A3B3C;
+  font-family:'Philopsopher';
+  font-size: 1rem;
+  font-weight:1rem;
 }
 
 .hw-list {
