--- a/Window/toolscreen/tool.css
+++ b/Window/toolscreen/tool.css
@@ -26,10 +26,6 @@ html,body{
     margin:0;
     text-align:right;
 }
-.navbarandtitlecontainer4{
-  position:sticky;
-  top:0px;
-}
 
 .navbar4 li{
     display: inline-block;
@@ -46,7 +42,10 @@ html,body{
     font-family: 'Montserrat', sans-serif;
     text-align:center;
 }
-
+.navbarandtitlecontainer4{
+  position:sticky;
+  top:0px;
+}
 .navbar4 a {
   position: relative;
   z-index: 1;
@@ -66,6 +65,8 @@ html,body{
   color: #222831;
 }
 
+
+/* calculator styling */
 .calculatorheader{
     font-family:'montserrat';
     font-size:3rem;
@@ -127,45 +128,120 @@ button{
     color: #0092ca;
 }
 
+/*Word Counter Styling*/
+.wordcounterwrapper{
+  position:absolute;
+  width:90vmin;
+  transform: translate(-50%, -50%);
+  top:150%;
+  left:50%;
+}
+
+.wordcontainer{
+  background:white;
+  padding: 50px 30px 80px 30px;
+  border-radius:2rem;
+  box-shadow: 0px 30px 50px rgba(30, 21, 49, 0.3);
+}
+
+.wordcountertitle{
+  font-family:'montserrat';
+  font-size:2rem;
+  color:#333;
+  text-align:center;
+}
+
+.wordcounterdirections{
+  font-family:'philosopher';
+  font-size:1rem;
+  color:#3A3B3C;
+  text-align:center;
+}
+
+.wordcountertextarea{
+  text-align:center;
+  justify-content:center;
+  align-items:center;
+  width:100%;
+  top:175%;
+  resize:none;
+  font-size:1rem;
+  font-family:serif;
+  color:black;
+}
+
+.counter{
+  background-color:#222831;
+  width:70%;
+  padding:20px;
+  position:relative;
+  transform:translate(-50%, -50%);
+  left:50%;
+  display:flex;
+  justify-content: space-around;
+  text-align:center;
+  border-radius:5px;
+  box-shadow:0px 20px 40px rgba(30, 21, 49, 0.4);
+}
+
+.counter p{
+  color:#eeeeee;
+}
+
+.counter h5{
+  color:white;
+  font-size:2rem;
+}
+
+.counterboxarea{
+  border-radius:2rem;
+}
+
 /* footer for screen with hyperlinks */
-.footer-container{
-    background-color:#393e46;
-    padding-bottom: 0;
-    padding-top: 0;
-  }
-  .footer{
-    width:100%;
-    height: 30vh;
-    background-color:#393e46;
-    color:white;
-    display:flex;
-    margin: 0 auto;
-    justify-content:center;
-    flex-wrap:wrap;
-  }
-  
-  .footer-heading{
-    padding-top:2rem;
-    display:flex;
-    flex-direction: column;
-    margin-right: 4rem;
-  }
-  
-  .footer-heading h2{
-    margin-bottom: 2rem;
-  }
-  
-  .footer-heading a{
-    color:#eeeeee;
-    text-decoration:none;
-    margin-bottom:0.5rem;
-  }
-  /* footer-text chnages color when hovered */
-  .footer-heading a:hover{
-    color:gray;
-    transition: 0.3s ease-out;
-  }
-  .footer-head h2:hover{
-    color:darkgray;
-    transition: 0.3 ease-out;
-  }
+.footer-container {
+  position: relative;
+  bottom: 0;
+  top:90%;
+  width: 100%;
+  background-color: #393e46;
+  padding-bottom: 0;
+  padding-top: 0;
+}
+
+.footer {
+  width: 100%;
+  min-height: 30vh;
+  background-color: #393e46;
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.footer-heading {
+  padding-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  margin-right: 4rem;
+}
+
+.footer-heading h2 {
+  margin-bottom: 2rem;
+}
+
+.footer-heading a {
+  color: #eeeeee;
+  text-decoration: none;
+  margin-bottom: 0.5rem;
+}
+
+/* footer-text changes color when hovered */
+.footer-heading a:hover {
+  color: gray;
+  transition: 0.3s ease-out;
+}
+
+.footer-head h2:hover {
+  color: darkgray;
+  transition: 0.3s ease-out;
+}
