--- a/Window/toolscreen/tool.css
+++ b/Window/toolscreen/tool.css
@@ -65,6 +65,27 @@ html,body{
   color: #222831;
 }
 
+/*conversion picture edit*/
+.conversionpic{
+  width: 500px;
+  height: auto;
+  border: none;
+  border-radius: 25px;
+  margin-top:1rem;
+}
+
+.conversion-container{
+  display:flex;
+  align-items:flex-start;
+  margin-top:6rem;
+  margin-right:20rem;
+}
+
+.conversionpic:hover{
+  height:auto;
+  width:900px;
+  transition: all 1s ease-in-out;
+}
 
 /* calculator styling */
 .calculatorheader{
@@ -73,18 +94,36 @@ html,body{
     color:#333;
     font-weight:2rem;
     text-align:center;
+    margin-bottom:1rem;
+}
+/*Help align title,calculator, and conversion pic */
+.calculator-title {
+  margin-right:1rem;
+  margin-top:0;
+}
+
+.calculator-container{
+  margin:0 auto;
+  align-items:center;
+}
+
+.container{
+  display:flex;
+  align-items:flex-start;
 }
 .calculatorbody{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content:center;
+  justify-content:space-between;
+  align-items: flex-start;
+  padding-top: 2rem;
 }
 .calculator{
     border: 1px solid #717377;
     padding: 20px;
     border-radius: 16px;
+    margin-right:2rem;
+    margin-top:1rem;
     background: linear-gradient(45deg, #0a0a0a, #3a4452);;
     box-shadow: 0px 3px 15px rgba(113, 115, 119, 0.5);
 
