--- a/Window/createscreen/create.css
+++ b/Window/createscreen/create.css
@@ -121,12 +121,27 @@ body{
 
 /* center add homework area*/
 .container{
-  width:50%;
-  min-height: 75vh;
+  width:70%;
+  min-height: auto;
   background:white;
   padding:10px;
   margin:100px auto;
-  border-radius:25%;
+  border-radius:1rem;
+  border-color:blue;
+  box-shadow: 0 0 0 blue;
+  animation:hwtext 3s infinite;
+}
+
+@keyframes hwtext{
+  0%{
+      box-shadow:#444;
+  }
+  50%{
+      box-shadow: 0 0 50px;
+  }
+  100%{
+      box-shadow:#444;
+  }
 }
 
 .exampletext{
@@ -257,8 +272,23 @@ ul li span:hover{
   box-shadow: 0 10px 25px rgba(0,0,0,0.1);
   color:#333;
   font-family:'montserrat';
-  font-weight:2rem;
+  font-weight:2rem;border-color:blue;
+  box-shadow: 0 0 0 blue;
+  animation:timer 3s infinite;
 }
+
+@keyframes timer{
+  0%{
+      box-shadow:#444;
+  }
+  50%{
+      box-shadow: 0 0 50px;
+  }
+  100%{
+      box-shadow:#444;
+  }
+}
+
 .wrapper img{
   max-width: 103px;
 }
@@ -328,6 +358,22 @@ ul li span:hover{
   justify-content:center;
   flex-wrap:wrap;
   padding-top:50px;
+  border-color:#eeeeee;
+  box-shadow: 0 0 0 #eeeeee;
+  animation:footer 3s infinite;
+}
+
+/*animation on footer*/
+@keyframes footer{
+  0%{
+      box-shadow:#444;
+  }
+  50%{
+      box-shadow: 0 0 100px;
+  }
+  100%{
+      box-shadow:#444;
+  }
 }
 
 .footer-heading{
