--- a/Window/toolscreen/tool.css
+++ b/Window/toolscreen/tool.css
@@ -212,7 +212,23 @@ button{
   padding: 50px 30px 80px 30px;
   border-radius:2rem;
   box-shadow: 0px 30px 50px rgba(30, 21, 49, 0.3);
+  border-color:blue;
+  box-shadow: 0 0 0 blue;
+  animation:wordcounter 3s infinite;
 }
+
+@keyframes wordcounter{
+  0%{
+      box-shadow:#444;
+  }
+  50%{
+      box-shadow: 0 0 50px;
+  }
+  100%{
+      box-shadow:#444;
+  }
+}
+
 
 .wordcountertitle{
   font-family:'montserrat';
@@ -229,7 +245,6 @@ button{
 }
 
 .wordcountertextarea{
-  text-align:center;
   justify-content:center;
   align-items:center;
   width:100%;
@@ -252,7 +267,23 @@ button{
   text-align:center;
   border-radius:5px;
   box-shadow:0px 20px 40px rgba(30, 21, 49, 0.4);
+  border-color:blue;
+  box-shadow: 0 0 0 blue;
+  animation:counter 3s infinite;
 }
+
+@keyframes counter{
+  0%{
+      box-shadow:#444;
+  }
+  50%{
+      box-shadow: 0 0 50px;
+  }
+  100%{
+      box-shadow:#444;
+  }
+}
+
 
 .counter p{
   color:#eeeeee;
@@ -278,14 +309,32 @@ button{
   padding-top: 0;
 }
 
-.footer {
-  width: 100%;
-  min-height: 30vh;
-  background-color: #393e46;
-  color: white;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+.footer{
+  width:100%;
+  height: 30vh;
+  background-color:#393e46;
+  color:white;
+  display:flex;
+  margin: 0 auto;
+  justify-content:center;
+  flex-wrap:wrap;
+  padding-top:50px;
+  border-color:#eeeeee;
+  box-shadow: 0 0 0 #eeeeee;
+  animation:footer 3s infinite;
+}
+
+/*animation on footer*/
+@keyframes footer{
+  0%{
+      box-shadow:#444;
+  }
+  50%{
+      box-shadow: 0 0 100px;
+  }
+  100%{
+      box-shadow:#444;
+  }
 }
 
 .footer-heading {
